<resources>
    <string name="app_name">DDEMO</string>

    <string name="facebook_app_id">416049966550914</string>
    <string name="fb_login_protocol_scheme">fb416049966550914</string>
    <!--SignUp-->

    <string name="set_up_your_account">Set up your \naccount</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="i_would_like_to_receive_offers_upates">I would like to receive offers &amp; upates</string>
    <string name="upload_your_vaccination_certificate">Upload your COVID-19 \nVaccination Certificate</string>


    <string name="i_agree_to_the_tnc">I agree to the </string>
    <string name="tnc"><font fgcolor='#241e61'> Terms and conditions</font></string>

    <string name="i_have_been_vaccinated">I have been vaccinated</string>
    <string name="enter_verification_code">Enter \n verification code</string>
    <string name="did_not_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_proceed">verify &amp; proceed</string>
    <string name="otp_entere_incorrect">The OTP entered by you is incorrect</string>
    <string name="continue_">continue</string>

    <!--SignIn-->
    <string name="already_a_user_signin">Already a user? SIGN In</string>
    <string name="already_a_user">Already a user?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user_sign_up">New User?Sign up?</string>
    <string name="or_connect_with">Or</string>

    <!--Enterpin-->

    <string name="enter_pin">Enter pin</string>
    <string name="pin">Pin</string>
    <string name="forgot_pin">FORGOT PIN?</string>
    <string name="proceed">Proceed</string>
    <string name="skip">Skip</string>
    <string name="send_otp">send OTP</string>
    <string name="don_t_worry_it_happens_you_are_good">Don\'t worry!it happens, you are good!</string>
    <string name="enter_your_registered_number_below_to_retrive_your_account">Enter your registered number\n below to retrive your account</string>
    <string name="you_re_just_one_step_away_to_book_your_new_demo">You\'re just one step away to book \n your new DEMO</string>
    <string name="your_password_has_been_reset">Your password has been \n reset successfully</string>

    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload_file">upload file</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="new_user">new user?</string>

    <string name="ttl_connection_not_available">Connection Error!</string>
    <string name="msg_connection_not_available">This App requires an Internet Connection. Make sure you have cell service or Wifi connection and give it another try. </string>
    <string name="sign_up">Sign Up</string>
    <string name="validation_enter_mobile_number">Please enter valid mobile number</string>
    <string name="module_name">moduleName</string>
    <string name="validation_enter_otp">Please Enter Valid OTP</string>
    <string name="user_id">UserID</string>
    <string name="reset_password">Reset Password</string>
    <string name="validation_password_length">Password length must be 4</string>
    <string name="validation_confirm_password">Please Enter confirm password</string>
    <string name="validation_new_password">Please Enter new password</string>
    <string name="validation_same_password">Confirm password is not same as new password</string>
    <string name="login">Login</string>
    <string name="otp_entered_is_incorrect">The OTP entered by you is incorrect</string>
    <string name="please_enter_mobile_number">Please enter Mobile Number to Continue</string>
    <string name="msg_connection_timeout">Could not connect to server, Please try after sometime</string>
    <string name="home">Home</string>
    <string name="mydemos">My Demos</string>
    <string name="takedemos">Take A  Demo</string>
    <string name="drive_my_demo">Drive My Demo</string>
    <string name="i_would_like_to">I would like to:</string>
    <string name="meet_a_specialist">Meet A Specialist</string>

    <integer name="pin_length">4</integer>

    <string name="space">\u0020</string>
    <string name="personalize_your_car_to_take_a_demo">PERSONALIZE YOUR CAR TO TAKE A DEMO</string>
    <string name="search_for_product_or_brand">Search for a Product or Brand</string>
    <string name="yay_we_have_suggestions">CUSTOMERS ARE EXCITED FOR THESE DEMO CARS</string>
    <string name="top_dealers_for_demo">TOP DEALERS FOR DEMO</string>
    <string name="schedule">Schedule</string>
    <string name="where_do_yo_want_the_demo">Where do yo want the Demo?</string>
    <string name="you_will_get_top_model_for_demo">You will get top model for Demo</string>
    <string name="let_us_help_you_choose_your_perfect_car_to_take_a_demo_personalise_here">Let us help you choose your perfect car to take a Demo. <font color='#241e61'>Personalise Here </font></string>
    <string name="new_launch">NEW LAUNCH</string>
    <string name="reviews">Reviews</string>
    <string name="specifications">Specifications</string>
    <string name="mcd_parking_charges">MCD Parking Charges</string>
    <string name="fastag">Fastag</string>
    <string name="basic_kit">Basic Kit</string>
    <string name="total_benefits">Total Benefits</string>
    <string name="on_road_price">On Road Price</string>
    <string name="porfoma_invoice">Porfoma Invoice</string>
    <string name="you_will_get_the_best_demo_variants_available_with_our_demo_partners">You will get the Top or Best Demo variants available with our Demo Partners</string>
    <string name="demos_completed">Demos Completed</string>
    <string name="virtual_meet">Virtual Meet</string>
    <string name="schedue">Schedule</string>
    <string name="if_your_desired_date_and_timing_is_not_available_then_try_another_car_schedule">If your desired date and timing is not available then try <font color='#241e61'> another car schedule</font></string>
    <string name="tip_click_here_to_see_how_to_get_the_most_out_of_your_demo_experience">Tip: <font color='#241e61'> Click here </font>to see how to get the most out of your Demo Experience</string>
    <string name="cancel_demo">Cancel Demo</string>
    <string name="cancel_meeting">Cancel Meeting</string>
    <string name="contact_demo">Contact Demo Specialist</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="leave_a_voice_message">Leave a Voice Message</string>
    <string name="please_select_a_reason_to_cancel">Please Select a reason to cancel</string>
    <string name="support">SUPPORT</string>
    <string name="try_the_faq_page_for_your_querries">Try the FAQ page for your querries</string>
    <string name="search_for_question">Search for Question</string>
    <string name="faqs">FAQs</string>
    <string name="confirm_cancel">Confirm Cancel</string>
    <string name="please_feel_free_to_write_to_us_at">Please feel free to write to us at</string>
    <string name="total_demos">Total Demos  </string>
    <string name="launch_date">Launch Date</string>
    <string name="prebook_demo">Prebook Demo</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="contact">Contact</string>
    <string name="favourite_demo_specialist">Favorite Demo Specialist</string>
    <string name="default_notification_channel_id">2</string>
    <string name="tap_to_learn_more">Tap to learn more</string>
    <string name="colors">Colors</string>
    <string name="know_more">Know More</string>
    <string name="see_profile">See Profile</string>
    <string name="write_incase_any_feedback">Write incase any feedback</string>
    <string name="submit">Submit</string>
    <string name="hope_enjoy_demo">Hope you enjoyed your Demo!</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="or">or</string>
    <string name="demos_taken">Demos taken</string>
    <string name="profoma_invoice"><u>Profoma Invoice</u></string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="my_demo_trips">My Demo Trips</string>
    <string name="choose_your_budget">CHOOSE YOUR BUDGET</string>
    <string name="join_call">Start Call</string>
    <string name="book_a_meeting">Book A Meeting</string>
    <string name="performa_invoice">Performa Invoice</string>
    <string name="play_Recording">Voice Message</string>
    <string name="arrived">Arrived</string>
    <string name="rejected">Rejected</string>
    <string name="where_do_you_want_meeting">Where do you want the Meeting?</string>
    <string name="ex_showroom">Ex-showroom:</string>
    <string name="validation_enter_address">Please enter Address</string>
    <string name="left_home_meeting">Left Home For Meeting</string>
    <string name="left_home_demo">Left Home For Demo</string>
    <string name="delayed">Delayed</string>
    <string name="final_price">Final Price</string>
    <string name="change_address"><u>Change address</u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="demo_location">Demo Location:</string>
    <string name="your_house">Confirm/Edit</string>
    <string name="select_demo_loc">Select Demo Location</string>
    <string name="corporate_govt_emp_offer">Corp./Govt.Emp Offer</string>
    <string name="extended_warranty">Extended Warranty</string>
    <string name="rto">RTO</string>
    <string name="insurance">Insurance</string>
    <string name="exchange_bonus">Exchange Bonus</string>
    <string name="cash_discount">Cash Discount</string>
    <string name="already_user_pin_msg">you are already registered user. please proceed with OTP</string>
    <string name="ex_showroom_price">Ex-Showroom Price</string>
    <string name="tnc_apply">(TnC apply)</string>
    <string name="upload_dl">Upload Driving License</string>
    <string name="dl_number">Driving License Number</string>
    <string name="please_keep_your_driving_license_ready">Please keep your driving license ready with you</string>
    <string name="save_amp_continue"><![CDATA[SAVE & CONTINUE]]></string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="driving_license">Driving License</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="select_driving_license">Select Driving License</string>
    <string name="welcome_messages">You have , %1$s! Minutes to upload Driving license or else booking will be cancelled</string>
    <string name="please_do_share_this_with_demo_specialist">Please do share this with Demo Specialist</string>


</resources>