<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
            name="headermodel"
            type="com.demo.registrationLogin.model.HeaderModel" />

    </data>
    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/comman_header_layout"
            bind:headermodel="@{headermodel}" >
        </include>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_worry_it_happens_you_are_good"
            style="@style/forgot_password_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_number_below_to_retrive_your_account"
            style="@style/forgot_password_text"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/black"/>


        <TextView
            android:layout_height="wrap_content"
            style="@style/redButton"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_otp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>