<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
            name="headermodel"
            type="com.demo.registrationLogin.model.HeaderModel" />

    </data>
    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/comman_header_layout"
            bind:headermodel="@{headermodel}" >
        </include>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_re_just_one_step_away_to_book_your_new_demo"
            style="@style/forgot_password_text"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="@color/black"/>

        <TextView
            style="@style/redButton"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_otp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>