<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="end"
        android:background="#00000000"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/close_white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:padding="@dimen/margin_20"
        android:background="@drawable/google_rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/demo_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#474747" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_toEndOf="@+id/destination"
            android:id="@+id/house"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#474747"
            android:text="@string/your_house"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/customer_location"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_below="@+id/house"
            android:paddingBottom="@dimen/margin_40"
            android:paddingStart="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:hint="@string/demo_location"
            android:gravity="start"
            android:textColor="#818181"
            android:maxLines="4"
            android:maxLength="200"
            tools:text=" behind VTC, Urjanagar 1, Kudasan, Gandhinagar, Gujarat 382421"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_grey_rounded_corner"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@+id/customer_location"
            style="@style/redButton"
            android:text="@string/submit"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>